--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "sha.js": "^2.4.11"
   }
 }
